Migrate some CSS selector based functionality for popups

--- a/readthedocsext/theme/templates/semantic-ui/fields/checkbox.html
+++ b/readthedocsext/theme/templates/semantic-ui/fields/checkbox.html
@@ -25,7 +25,7 @@
       {{ field.label|safe }}
 
       {% if field.help_text %}
-        <i class="ui small circular grey help icon" data-html="{{ field.help_text }}"></i>
+        <i class="ui small circular grey help icon" data-html="{{ field.help_text }}" data-bind="semanticui: {popup: {hoverable: true}}"></i>
       {% endif %}
     </label>
   {% endif %}
