--- a/readthedocsext/theme/templates/socialaccount/connections.html
+++ b/readthedocsext/theme/templates/socialaccount/connections.html
@@ -9,7 +9,7 @@
 {% block edit_content %}
   {% include "socialaccount/partials/social_account_list.html" with objects=form.accounts %}
 
-  <div class="ui tiny modal" id="socialaccount-connections-modal">
+  <div class="ui tiny modal" data-modal-id="socialaccount-connections">
     <i class="close icon"></i>
     <div class="header">
       {% trans "Add a connection" %}
