Add more theme site.variables

--- a/readthedocsext/theme/templates/homepage.html
+++ b/readthedocsext/theme/templates/homepage.html
@@ -20,9 +20,14 @@
   {% include "includes/header.html" %}
 {% endblock %}
 
+
+
+
+
+
 {% block content-wrapper %}
   <!-- Lead -->
-  <section class="ui basic segment bottom attached inverted very padded">
+  <section class="ui basic segment bottom inverted blue very padded">
     <div class="ui container center aligned">
       <div class="ui inverted icon header">
         <i class="search icon"></i>
