--- a/readthedocsext/theme/templates/includes/crud/list.html
+++ b/readthedocsext/theme/templates/includes/crud/list.html
@@ -1,19 +1,19 @@
-{% comment %}
+{% comment "rst" %}
 
-  CRUD list view
-  ==============
+CRUD list view
+==============
 
-  This is a common template which will provide the necessary scaffolding for a
-  list view of items. This view is replicated throughout our interface and so
-  all list views will share a common style and functionality.
+This is a common template which will provide the necessary scaffolding for a
+list view of items. This view is replicated throughout our interface and so
+all list views will share a common style and functionality.
 
-  Parameters that can be passed in:
+Parameters that can be passed in:
 
-  objects
-      This is the queryset object that the list view will iterate over
+objects
+    This is the queryset object that the list view will iterate over
 
-  skip_pagination
-      Skip pagination calls and links
+skip_pagination
+    Skip pagination calls and links
 
 {% endcomment %}
 
