--- a/readthedocsext/theme/templates/projects/partials/project_list.html
+++ b/readthedocsext/theme/templates/projects/partials/project_list.html
@@ -10,7 +10,7 @@
 {% block view_binding %}data-bind="with: ProjectListView()"{% endblock view_binding %}
 
 {% block top_left_menu_items %}
-  {# Pass information from Django into site JS #}
+  {# Pass Django template tag specific configuration into ``ProjectListView`` #}
   <script type="application/json" data-bind="jsonInit: config">
 {
   "api_url": "{% url "projects-list" %}"
