Switch to Fomantic UI and use JS/CSS patterns from site-community
Namely:

* JS import pattern for SUI elements
* SUI theming pattern for rtd-common and rtd-application
* Move existing style modifications to a theme

--- a/readthedocsext/theme/templates/includes/header.html
+++ b/readthedocsext/theme/templates/includes/header.html
@@ -5,7 +5,7 @@
 <div class="ui inverted attached stackable menu">
   <div class="ui container">
     <a class="header item" href="{% url "homepage" %}">
-      <div class="ui readthedocs-logo image"></div>
+      <img class="ui image" src="{% static 'readthedocsext/theme/images/logo-wordmark-light.svg' %}" width="220" alt="Read the Docs logo"/>
     </a>
 
     <div class="right menu">
